--- a/index.html
+++ b/index.html
@@ -7,35 +7,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Typescript Grid Control">
     <meta name="author" content="Syncfusion">
-    
+
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="https://ej2.syncfusion.com/javascript/demos/grid/foreign-key/datasource.js" type="text/javascript"></script>
+    <script src="https://ej2.syncfusion.com/javascript/demos/grid/foreign-key/datasource.js"
+        type="text/javascript"></script>
     <link href="https://cdn.syncfusion.com/ej2/23.1.44/material.css" rel="stylesheet">
     <!-- <script src="https://cdn.syncfusion.com/ej2/22.1.38/dist/ej2.min.js" type="text/javascript"></script> -->
     <script src="https://ej2.syncfusion.com/javascript/demos/grid/default/datasource.js"
         type="text/javascript"></script>
 
-
-    <script src="ej2_grid_23_1_44.js" type="text/javascript"></script>
-    <!-- <script src="datasource.js" type="text/javascript"></script> -->
+        <script src="ej2.min.js" type="text/javascript"></script>
+    <!-- <script src="ej2_grid_23_1_44.js" type="text/javascript"></script> -->
 
     <style>
-        .parent, .child1, .child2 {
+        .parent,
+        .child1,
+        .child2 {
             display: inline;
         }
+
         .child1 {
             width: 48%;
             float: right;
         }
+
         .child2 {
             width: 48%;
             float: left;
+        }
+
+        .e-radio-wrapper {
+            margin-top: 9px;
+        }
+
+        li {
+            list-style: none;
+        }
+
+        .pageHeader {
+            display: inline;
         }
     </style>
 </head>
 
 <body>
-    <br /><br /><br /><br />
+    <br /><br />
+    <!-- <br /><br /> -->
+    <div class="pageHeader">
+        <div style="display:inline; float: left">
+            <ul style="display:inline;">
+                <li><input type="radio" id="radiobutton1"></li>
+                <li><input type="radio" id="radiobutton2"></li>
+                <li><input type="radio" id="radiobutton3"></li>
+            </ul>
+        </div>
+        <div style="display:inline; width:250px; float: left; margin: 30px;">
+            <br /><br />
+            <input type="text" tabindex="1" id='ddlelement' />
+        </div>
+    </div>
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
     <div class="parent">
         <div class="child1">
             <b>local data:</b><br />
